Bugfix: Fix for increasing gap between filter and content.

--- a/styles.css
+++ b/styles.css
@@ -100,10 +100,6 @@
     width: 100%;
 }
 
-.musi-courses-container.wunderbyte_table_filter_on .wunderbyte_table_container {
-    grid-template-columns: auto;
-}
-
 .musi-courses-container .wunderbyteTableFilter .form-group {
     border: none;
     background-color: #fff !important;
